add events list api

--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,12 @@
         "php": "^7.0",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
-        "doctrine/orm": "^2.5",
+        "doctrine/orm": "2.5.6",
         "friendsofsymfony/rest-bundle": "^2.2@dev",
         "friendsofsymfony/user-bundle": "^2.0.0",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-paginator-bundle": "^2.4",
+        "willdurand/hateoas-bundle": "^1.1",
         "nelmio/api-doc-bundle": "^2.13",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
