--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,9 +1,10 @@
 imports:
     - { resource: "@SWPBridgeBundle/Resources/config/app/config.yml" }
     - { resource: "@SWPUserBundle/Resources/config/app/config.yml" }
+    - { resource: "@CoreBundle/Resources/config/app/config.yml" }
     - { resource: parameters.yml }
     - { resource: security.yml }
-    - { resource: services.yml }
+    - { resource: "@CoreBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -49,71 +50,10 @@ doctrine:
         password: '%database_password%'
         charset: UTF8
     orm:
+        resolve_target_entities:
+            SWP\Component\Bridge\Model\EventInterface: SWP\EventsBundle\Model\Event
         auto_generate_proxy_classes: '%kernel.debug%'
         entity_managers:
             default:
                 naming_strategy: doctrine.orm.naming_strategy.underscore
                 auto_mapping: false
-                mappings:
-                    SWPEventsBundle:
-                        type: yml
-                        prefix: SWP\EventsBundle\Model
-                        dir: Resources/config/doctrine-orm
-fos_user:
-    db_driver: orm
-    firewall_name: main
-    user_class: SWP\Bundle\UserBundle\Model\User
-    from_email:
-        address: contact@publisher.dev
-        sender_name: Publisher
-    registration:
-        confirmation:
-            enabled: true
-
-nelmio_api_doc: ~
-
-fos_rest:
-    zone:
-        - { path: ^/api/* }
-    versioning:
-        enabled: false
-    routing_loader:
-        default_format: json
-    view:
-        formats:
-            json: true
-        view_response_listener: false
-    serializer:
-        serialize_null: true
-    format_listener:
-        rules:
-            - { path: "^/api", priorities: ['json'], fallback_format: json, prefer_extension: true }
-            - { path: "^/", stop: true }
-    body_listener:
-        decoders:
-            json: fos_rest.decoder.jsontoform
-    disable_csrf_role: ROLE_API
-    exception:
-        codes:
-            "Symfony\\Component\\Routing\\Exception\\ResourceNotFoundException": 404
-            "SWP\\Bundle\\SettingsBundle\\Exception\\InvalidScopeException": 500
-        messages:
-            "Symfony\\Component\\Routing\\Exception\\ResourceNotFoundException": true
-            "SWP\\Bundle\\SettingsBundle\\Exception\\InvalidScopeException": true
-
-swp_bridge:
-    persistence:
-        orm: true
-
-
-swp_events:
-    persistence:
-        orm: true
-
-swp_settings:
-    persistence:
-        orm: true
-
-swp_user:
-    persistence:
-        orm: true
