--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -18,14 +18,13 @@ framework:
         strict_requirements: ~
     form: ~
     csrf_protection: ~
-    validation: { enable_annotations: true }
+    validation: { enabled: true }
     templating:
         engines: ['twig']
     default_locale: '%locale%'
     trusted_hosts: ~
     trusted_proxies: ~
     session:
-        # http://symfony.com/doc/current/reference/configuration/framework.html#handler-id
         handler_id:  session.handler.native_file
         save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
     fragments: ~
